Updated the manifest for home and results page

--- a/FinalProject/app/src/main/AndroidManifest.xml
+++ b/FinalProject/app/src/main/AndroidManifest.xml
@@ -11,6 +11,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinalProject">
         <activity
+            android:name=".ResultsPage_"
+            android:exported="false" />
+        <activity
+            android:name=".HomePage_"
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan"/>
+        <activity
             android:name=".ChangePassword_"
             android:exported="true" />
         <activity
